1.12 cleanupDecompSrgJar